Updates to app.js file and index.html This allows form data inserted by user to be stored in mongodb Please make sure that port number in app.js file is corresponds to your available port
Issues:
Although form data is posted, I am having trouble linking index.css style sheet to the index.html sheet. HTML is presented on webpage, but with no style

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/index.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="/css/index.css" media="screen"/>
     <title>ReviewU - Restaurant Review Management Software</title>
         <meta name="viewport" content=" width=device-width, initial-scale=1">
         <!--<link rel="stylesheet" type="text/css" href="theme.css" media="screen"/>-->
